--- a/templates/actor/_partials/_stats-npc.hbs
+++ b/templates/actor/_partials/_stats-npc.hbs
@@ -22,13 +22,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.sta}}" data-trait-name="{{localize "l5r4.mechanics.traits.sta"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.sta"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="sta" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.sta}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="sta" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.sta}}</a>
     </div>
     <div class="trait trait-willpower">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.wil}}" data-trait-name="{{localize "l5r4.mechanics.traits.wil"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.wil"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="wil" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.wil}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="wil" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.wil}}</a>
     </div>
 
     <!-- Air ring -->
@@ -43,13 +43,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.ref}}" data-trait-name="{{localize "l5r4.mechanics.traits.ref"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.ref"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="ref" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.ref}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="ref" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.ref}}</a>
     </div>
     <div class="trait trait-awarness">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.awa}}" data-trait-name="{{localize "l5r4.mechanics.traits.awa"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.awa"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="awa" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.awa}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="awa" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.awa}}</a>
     </div>
 
     <!-- Water ring -->
@@ -64,13 +64,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.str}}" data-trait-name="{{localize "l5r4.mechanics.traits.str"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.str"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="str" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.str}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="str" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.str}}</a>
     </div>
     <div class="trait trait-perception">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.per}}" data-trait-name="{{localize "l5r4.mechanics.traits.per"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.per"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="per" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.per}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="per" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.per}}</a>
     </div>
 
     <!-- Fire ring -->
@@ -87,18 +87,18 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.agi}}" data-trait-name="{{localize "l5r4.mechanics.traits.agi"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.agi"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="agi" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.agi}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="agi" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.agi}}</a>
     </div>
     <div class="trait trait-intelligence">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.int}}" data-trait-name="{{localize "l5r4.mechanics.traits.int"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.int"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="int" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.int}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="int" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.int}}</a>
     </div>
 
     <!-- Void ring -->
     <h4 class="ring-name ring-name-void">{{localize "l5r4.mechanics.rings.void"}}</h4>
-    <a class="ring-rank ring-rank-void" data-action="ring-rank-void" data-ring="void" role="button" title="Left click: +1, Right click: -1">{{system.rings.void.rank}}</a>
+    <a class="ring-rank ring-rank-void" data-action="ring-rank-void" data-ring="void" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{system.rings.void.rank}}</a>
     <div class="void-ring">
       <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.void.rank}}" data-ring-name="{{localize "l5r4.mechanics.rings.void"}}" data-system-ring="void">
         <img src="{{iconPath 'void.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="void-ring-img" />
@@ -107,7 +107,7 @@
     {{#if @root.showNpcVoidPoints}}
       <div class="void-points">
         <div class="void-points-dots" data-action="void-points-dots" data-value="{{system.rings.void.value}}" role="button"
-            title="Left click: +1, Right click: -1">
+            title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">
           <span class="void-dot" data-idx="1"></span>
           <span class="void-dot" data-idx="2"></span>
           <span class="void-dot" data-idx="3"></span>
@@ -122,6 +122,125 @@
       </div>
     {{/if}}
   </div>
+
+  <section class="flexcol -gap-sm">
+    <div class="flexrow -gap-sm section-title">
+      <h4 class="title">{{localize "l5r4.mechanics.combat.attack"}} & {{localize "l5r4.ui.common.damage"}}</h4>
+    </div>
+    <section class="item-list -attacks -header">
+      <div class="item">
+        <span>{{localize "l5r4.ui.common.name"}}</span>
+        <span>{{localize "l5r4.mechanics.combat.attack"}}</span>
+        <span>{{localize "l5r4.ui.common.damage"}}</span>
+        <span></span>
+        <span></span>
+      </div>
+    </section>
+    <section class="item-list -attacks">
+      <div class="item -attacks -expandable">
+        <h4 class="flexrow -gap-sm title">{{localize "l5r4.mechanics.combat.attack"}} 1</h4>
+        <div>
+          <a class="button"
+             data-action="roll-attack"
+             data-roll="{{system.attack1.roll}}"
+             data-keep="{{system.attack1.keep}}"
+             data-description="{{system.attack1.type}}"
+             data-label="{{localize "l5r4.mechanics.combat.attack"}} 1"
+             title="{{localize "l5r4.mechanics.combat.attack"}}">
+            {{system.attack1.roll}}k{{system.attack1.keep}}
+          </a>
+        </div>
+        <div>
+          <a class="button"
+             data-action="roll-damage"
+             data-roll="{{system.damage1.roll}}"
+             data-keep="{{system.damage1.keep}}"
+             data-description="{{system.damage1.type}}"
+             data-label="{{localize "l5r4.ui.common.damage"}} 1"
+             title="{{localize "l5r4.mechanics.rolls.damageRoll"}}">
+            {{system.damage1.roll}}k{{system.damage1.keep}}
+          </a>
+        </div>
+        <span></span>
+        {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
+        <div class="expanded-text -gap-sm -npc">
+          <h5>{{localize "l5r4.mechanics.combat.attack"}} 1</h5>
+          <div class="flexrow -gap-xs">
+            <input name="system.attack1.roll" type="number" value="{{system.attack1.roll}}" data-type="Number" />
+            <span class="flex0">k</span>
+            <input name="system.attack1.keep" type="number" value="{{system.attack1.keep}}" data-type="Number" />
+          </div>
+          <h5>{{localize "l5r4.ui.common.action"}}</h5>
+          <div class="flexrow -gap-xs">
+            <select name="system.attack1.type">
+              {{selectOptions config.actionTypes selected=system.attack1.type localize=true}}
+            </select>
+          </div>
+          <h5>{{localize "l5r4.ui.common.damage"}}</h5>
+          <div class="flexrow -gap-xs">
+            <input name="system.damage1.roll" type="number" value="{{system.damage1.roll}}" data-type="Number" />
+            <span class="flex0">k</span>
+            <input name="system.damage1.keep" type="number" value="{{system.damage1.keep}}" data-type="Number" />
+          </div>
+          <h5>{{localize "l5r4.ui.common.type"}}</h5>
+          <div class="flexrow -gap-xs">
+            <input class="damage-type" name="system.damage1.type" type="text" value="{{system.damage1.type}}" data-type="string" />
+          </div>
+        </div>
+      </div>
+      <div class="item -attacks -expandable">
+        <h4 class="flexrow -gap-sm title">{{localize "l5r4.mechanics.combat.attack"}} 2</h4>
+        <div>
+          <a class="button"
+             data-action="roll-attack"
+             data-roll="{{system.attack2.roll}}"
+             data-keep="{{system.attack2.keep}}"
+             data-description="{{system.attack2.type}}"
+             data-label="{{localize "l5r4.mechanics.combat.attack"}} 2"
+             title="{{localize "l5r4.mechanics.combat.attack"}}">
+            {{system.attack2.roll}}k{{system.attack2.keep}}
+          </a>
+        </div>
+        <div>
+          <a class="button"
+             data-action="roll-damage"
+             data-roll="{{system.damage2.roll}}"
+             data-keep="{{system.damage2.keep}}"
+             data-description="{{system.damage2.type}}"
+             data-label="{{localize "l5r4.ui.common.damage"}} 2"
+             title="{{localize "l5r4.mechanics.rolls.damageRoll"}}">
+            {{system.damage2.roll}}k{{system.damage2.keep}}
+          </a>
+        </div>
+        <span></span>
+        {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
+        <div class="expanded-text -gap-sm -npc">
+          <h5>{{localize "l5r4.mechanics.combat.attack"}} 2</h54>
+          <div class="flexrow -gap-xs">
+            <input name="system.attack2.roll" type="number" value="{{system.attack2.roll}}" data-type="Number" />
+            <span class="flex0">k</span>
+            <input name="system.attack2.keep" type="number" value="{{system.attack2.keep}}" data-type="Number" />
+          </div>
+          <h5>{{localize "l5r4.ui.common.action"}}</h5>
+          <div class="flexrow -gap-xs">
+            <select name="system.attack2.type">
+              {{selectOptions config.actionTypes selected=system.attack2.type localize=true}}
+            </select>
+          </div>
+          <h5>{{localize "l5r4.ui.common.damage"}}</h5>
+          <div class="flexrow -gap-xs">
+            <input name="system.damage2.roll" type="number" value="{{system.damage2.roll}}" data-type="Number" />
+            <span class="flex0">k</span>
+            <input name="system.damage2.keep" type="number" value="{{system.damage2.keep}}" data-type="Number" />
+          </div>
+          <h5>{{localize "l5r4.ui.common.type"}}</h5>
+          <div class="flexrow -gap-xs">
+            <input class="damage-type" name="system.damage2.type" type="text" value="{{system.damage2.type}}" data-type="string" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
 
   {{> "systems/l5r4/templates/actor/_partials/_skills.hbs"}}
 
