--- a/templates/item/bow.hbs
+++ b/templates/item/bow.hbs
@@ -2,7 +2,9 @@
   <div class="form-group">
     <label>{{localize "l5r4.equipment.weapons.size"}}</label>
     <div class="form-fields">
-      <input name="system.size" type="text" value="{{system.size}}" />
+      <select name="system.size">
+        {{selectOptions config.sizes selected=system.size localize=true}}
+      </select>
     </div>
   </div>
   <div class="form-group">
