--- a/templates/actor/_partials/_stats.hbs
+++ b/templates/actor/_partials/_stats.hbs
@@ -57,13 +57,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.sta}}" data-trait-name="{{localize "l5r4.mechanics.traits.sta"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.sta"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="sta" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.sta}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="sta" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.sta}}</a>
     </div>
     <div class="trait trait-willpower">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.wil}}" data-trait-name="{{localize "l5r4.mechanics.traits.wil"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.wil"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="wil" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.wil}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="wil" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.wil}}</a>
     </div>
 
     <!-- Air ring -->
@@ -78,13 +78,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.ref}}" data-trait-name="{{localize "l5r4.mechanics.traits.ref"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.ref"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="ref" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.ref}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="ref" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.ref}}</a>
     </div>
     <div class="trait trait-awarness">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.awa}}" data-trait-name="{{localize "l5r4.mechanics.traits.awa"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.awa"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="awa" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.awa}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="awa" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.awa}}</a>
     </div>
 
     <!-- Water ring -->
@@ -99,13 +99,13 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.str}}" data-trait-name="{{localize "l5r4.mechanics.traits.str"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.str"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="str" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.str}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="str" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.str}}</a>
     </div>
     <div class="trait trait-perception">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.per}}" data-trait-name="{{localize "l5r4.mechanics.traits.per"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.per"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="per" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.per}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="per" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.per}}</a>
     </div>
 
     <!-- Fire ring -->
@@ -122,18 +122,18 @@
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.agi}}" data-trait-name="{{localize "l5r4.mechanics.traits.agi"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.agi"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="agi" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.agi}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="agi" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.agi}}</a>
     </div>
     <div class="trait trait-intelligence">
       <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.int}}" data-trait-name="{{localize "l5r4.mechanics.traits.int"}}">
         <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.int"}}</p>
       </a>
-      <a class="trait-rank" data-action="trait-rank" data-trait="int" role="button" title="Left click: +1, Right click: -1">{{@root.traitsEff.int}}</a>
+      <a class="trait-rank" data-action="trait-rank" data-trait="int" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.int}}</a>
     </div>
 
     <!-- Void ring -->
     <h4 class="ring-name ring-name-void">{{localize "l5r4.mechanics.rings.void"}}</h4>
-    <a class="ring-rank ring-rank-void" data-action="ring-rank-void" data-ring="void" role="button" title="Left click: +1, Right click: -1">{{system.rings.void.rank}}</a>
+    <a class="ring-rank ring-rank-void" data-action="ring-rank-void" data-ring="void" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{system.rings.void.rank}}</a>
     <div class="void-ring">
       <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.void.rank}}" data-ring-name="{{localize "l5r4.mechanics.rings.void"}}" data-system-ring="void">
         <img src="{{iconPath 'void.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="void-ring-img" />
@@ -141,7 +141,7 @@
     </div>
     <div class="void-points">
       <div class="void-points-dots" data-action="void-points-dots" data-value="{{system.rings.void.value}}" role="button"
-           title="Left click: +1, Right click: -1">
+           title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">
         <span class="void-dot" data-idx="1"></span>
         <span class="void-dot" data-idx="2"></span>
         <span class="void-dot" data-idx="3"></span>
