--- a/templates/actor/npc.hbs
+++ b/templates/actor/npc.hbs
@@ -4,6 +4,7 @@
     <div class="flexcol -gap-sm sidebar">
       <img class="actor-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
       {{> "systems/l5r4/templates/actor/_partials/_initiative.hbs"}}
+      {{> "systems/l5r4/templates/actor/_partials/_armor.hbs"}}
       {{> "systems/l5r4/templates/actor/_partials/_wounds.hbs"}}
     </div>
   </div>
