Fix multiple bugs and improve documentation
- Add missing 'dead' status effect to config and all language files
- Fix Full Defense stance rolling twice by adding race condition protection
- Remove attack button disabling when in defense stances
- Fix ReferenceError in SkillRoll function by proper variable scoping
- Remove unnecessary console.log statements
- Update comprehensive documentation for dice.js, pc-sheet.js, utils.js, and base-actor-sheet.js

--- a/templates/chat/roll-modifiers-dialog.hbs
+++ b/templates/chat/roll-modifiers-dialog.hbs
@@ -69,7 +69,7 @@
   {{#unless weapon}}
     <div class="form-group">
       <label>{{localize "l5r4.ui.common.tn"}}</label>
-      <input type="number" name="tn" />
+      <input type="number" name="tn" value="" placeholder="" />
     </div>
     <div class="form-group">
       <label>{{localize "l5r4.magic.spells.raises"}}</label>
