--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -107,6 +107,10 @@
 
   .section-container {
     padding: 0 0.5rem;
+
+    .editor-container {
+      min-height: 300px;
+    }
   }
 
   .title {
@@ -192,6 +196,7 @@
 
 .l5r4.pc {
   .actor-img {
+    cursor: pointer;
     height: 240px;
     max-width: 240px;
     min-width: 240px;
@@ -201,6 +206,7 @@
 
 .l5r4.npc {
   .actor-img {
+    cursor: pointer;
     height: 210px;
     max-width: 210px;
     min-width: 210px;
