--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -182,7 +182,8 @@
       font-size: var(--font-size-16);
       padding: 0 0.1rem;
 
-      > input {
+      > input,
+      > select {
         height: auto;
         line-height: 1;
       }
